--- a/css/style.css
+++ b/css/style.css
@@ -73,25 +73,8 @@ h1, h2, h4 {
   font-weight: 900;
 }
 
-h2 {
-  font-size: 30px;
-  line-height: 50px;
-  margin-bottom: 35px;
-}
-
-h4 {
-  font-size: 16px;
-  line-height: 26px;
-}
-
 a {
-  color: #000;
-  opacity: 0.77;
   text-decoration: none;
-}
-
-a:hover {
-  opacity: 1;
 }
 
 img {
@@ -111,27 +94,9 @@ img {
   padding: 2px 36px;
 }
 
-.site-navigation,
-.service-block,
-.slider,
-.footer-contacts ul,
-.contacts,
-.advantages ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
+/*           HEADER          */
 
-.info, .features {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-/*    header    */
-
-header {
+.main-header {
   font-size: 18px;
   font-weight: 700;
   line-height: 20px;
@@ -139,11 +104,19 @@ header {
   padding-bottom: 20px;
 }
 
-nav {
+.top-menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+}
+
+.site-navigation,
+.contacts {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .site-navigation {
@@ -155,11 +128,16 @@ nav {
 
 .site-navigation a {
   display: block;
+  margin-top: 20px;
   font-size: 10px;
   font-weight: 500;
   line-height: 20px;
   text-transform: uppercase;
-  margin-top: 20px;
+  letter-spacing: 0.6px;
+  color: #707070;
+}
+.site-navigation a:hover {
+  color: #000;
 }
 .site-navigation a:last-child {
   margin-right: 0;
@@ -178,27 +156,35 @@ nav {
   box-shadow: 0px 2px 4.75px 0.25px rgba(0, 255, 216, 0.6);
 }
 
-h1 {
-  font-family: 'Raleway', Arial, sans-serif;
-  font-size: 72px;
-  line-height: 87px;
-  margin-bottom: 15px;
-}
-
-/*    main    */
+/*          MAIN-BANER          */
 
 .advantages {
   padding-top: 100px;
   padding-bottom: 64px;
-  margin-bottom: 94px;
-  color: white;
+  margin-bottom: 98px;
+  color: #fff;
   background-color: #141414;
-  background: url("../img/welding.jpg") 50% 50% no-repeat,
-              linear-gradient( 90deg, rgba(13,13,13,0) 0%, rgba(13,13,13,0) 100%);
+  background: url("../img/welding.jpg") 45% 45% no-repeat,
+              linear-gradient( 90deg, rgba(13,13,13,0) 0%, rgba(13,13,13,0) 100%) 45% 45% no-repeat;
+}
+
+.advantages h1 {
+  font-family: 'Raleway', Arial, sans-serif;
+  font-size: 72px;
+  line-height: 87px;
+  letter-spacing: 3.6px;
+  margin-bottom: 15px;
+}
+
+.advantages ul, .features {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .features {
-  align-items: flex-end;
+  justify-content: space-between;
   margin-top: 113px;
 }
 
@@ -236,30 +222,29 @@ h1 {
 .block {
   width: 175px;
   text-align: center;
-}
-
-.block img {
-  margin-bottom: 8px;
-}
-
-.block p {
   font-size: 15px;
   line-height: 20px;
   font-weight: 400;
   opacity: 0.6;
 }
+
 .block:first-child {
   width: 200px;
 }
+
 .block:last-child {
   width: 240px;
 }
 
-#services h2 {
+/*         SERVICES           */
+
+.services h2 {
   position: relative;
+  font-size: 30px;
+  line-height: 50px;
 }
 
-#services h2::after {
+.services h2::after {
   position: absolute;
   top: 50%;
   left: 297px;
@@ -271,26 +256,32 @@ h1 {
 }
 
 .service-block {
+  list-style: none;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 
 .service-item {
-  width: 315px;
+  width: 270px;
+  box-sizing: padding-box;
+  padding-left: 40px;
   padding-left: 45px;
-  padding-top: 40px;
+  padding-top: 25px;
   min-height: 505px;
-  margin-bottom: 40px;
   box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.05);
 }
 
 .service-item h4 {
-  width: 270px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 26px;
 }
 
 .service-item ul {
   list-style: none;
-  width: 270px;
   margin: 0;
   padding: 0;
 }
@@ -305,8 +296,13 @@ h1 {
   text-decoration: underline;
 }
 
+/*         PARTNERS          */
+
 .partners h2 {
   position: relative;
+  font-size: 30px;
+  line-height: 50px;
+  margin-bottom: 35px;
 }
 
 .partners h2::after {
@@ -321,23 +317,22 @@ h1 {
 }
 
 .slider {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
   justify-content: space-between;
   margin-bottom: 128px;
   filter: grayscale(100%);
   opacity: 0.5;
 }
 
-.project-list {
-  width: 584px;
-  display: flex;
-  flex-direction: row;
-  align-content: space-between;
-  margin: 0;
-  padding: 0;
-}
+/*          PROJECTS          */
 
 .projects h2 {
   position: relative;
+  font-size: 30px;
+  line-height: 50px;
 }
 .projects h2::after {
   position: absolute;
@@ -348,6 +343,20 @@ h1 {
   width: 875px;
   height: 0;
   border: solid 1px #000;
+}
+
+.project-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.project {
+  width: 100%;
+  height: 290px;
+  color: #fff;
+  background-color: brown;
+  padding: 50px 25px;
 }
 
 .project strong {
@@ -365,7 +374,7 @@ h1 {
 .btn-next {
   display: block;
   text-align: center;
-  vertical-align: middle;
+  padding: 12px;
   width: 42px;
   height: 30px;
   color: #fff;
@@ -373,14 +382,6 @@ h1 {
 }
 .btn-next:hover {
   background-color: #00ffd8;
-}
-
-.project {
-  width: 100%;
-  height: 290px;
-  color: white;
-  background-color: brown;
-  padding: 50px 25px;
 }
 
 .project-1 {
@@ -402,7 +403,7 @@ h1 {
   background: url("../img/project6.jpg") 0 0 no-repeat;
 }
 
-/*    footer    */
+/*         FOOTER         */
 
 .map {
   width: 100%;
@@ -411,19 +412,27 @@ h1 {
   background: url("../img/map.png") 0 0 no-repeat;
 }
 
-iframe {
+.map iframe {
   width: 100%;
   border: none;
   border-bottom: solid 1px #00ffd8;
 }
 
-#write_us {
+.main-footer {
+  position: relative;
+  height: 530px;
+  background-color: #000;
+  color: #fff;
+  padding-top: 57px;
+}
+
+.feedback {
   position: absolute;
   left: 50%;
   margin-left: -290px;
   bottom: 130px;
   width: 400px;
-  background-color: white;
+  background-color: #fff;
   color: #000;
   padding-left: 70px;
   padding-top: 50px;
@@ -431,20 +440,35 @@ iframe {
   padding-bottom: 35px;
 }
 
-#write_us h2 {
+.feedback h2 {
   font-size: 25px;
+  line-height: 50px;
 }
 
-#write_us label {
+.feedback label {
   font-size: 20px;
   line-height: 50px;
   font-weight: 400;
 }
 
-#write_us input {
+.feedback input {
   width: 400px;
   border: none;
   border-bottom: solid 1px #ddd;
+}
+
+.feedback button {
+  margin-top: 34px;
+  padding: 13px 47px;
+  font-family: 'Raleway', Arial, sans-serif;
+  font-size: 25px;
+  line-height: 50px;
+  font-weight: 700;
+  background-color: #000;
+  color: #fff;
+}
+.feedback button:hover {
+  box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.3);
 }
 
 .user-name {
@@ -453,7 +477,7 @@ iframe {
   justify-content: space-between;
 }
 
-#write_us .user-name input {
+.feedback .user-name input {
   width: 180px;
 }
 
@@ -465,12 +489,21 @@ iframe {
   text-align: center;
 }
 
-footer {
-  position: relative;
-  height: 530px;
-  background-color: #000;
-  color: white;
-  padding-top: 57px;
+.info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer-contacts ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.coordinates {
+  width: 220px;
 }
 
 .copyright {
@@ -480,22 +513,4 @@ footer {
   margin-left: -150px;
   font-size: 10px;
   line-height: 25px;
-}
-
-.coordinates {
-  width: 220px;
-}
-
-#write_us button {
-  margin-top: 34px;
-  padding: 13px 47px;
-  font-family: 'Raleway', Arial, sans-serif;
-  font-size: 25px;
-  line-height: 50px;
-  font-weight: 700;
-  background-color: #000;
-  color: white;
-}
-#write_us button:hover {
-  box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.3);
 }
