--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,8 @@ img {
   margin-bottom: 100px;
   color: #fff;
   background-color: #141414;
-  background: url("../img/welding.jpg") 50% 50% no-repeat;
+  background: linear-gradient(to top, rgba(13,13,13,0) 0%, rgba(13,13,13,0) 470px),
+              url("../img/welding.jpg") 50% 100% no-repeat;
 }
 
 .advantages h1 {
@@ -179,33 +180,38 @@ img {
   margin-bottom: 15px;
 }
 
-.contact-buttons, .features {
+.about {
+  width: 1020px;
+  margin-bottom: 53px;
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 500;
+}
+
+.teal {
+  color: #00ffd8;
+}
+
+.contact-buttons {
   list-style: none;
   display: flex;
   margin: 0;
   padding: 0;
-}
-
-.contact-buttons {
   margin-bottom: 205px;
 }
 
-.features {
-  justify-content: space-between;
-}
-
-.advantages .btn {
+.contact-buttons .btn {
   text-transform: uppercase;
   margin-right: 20px;
   font-size: 20px;
   font-weight: 900;
   padding: 8px 80px;
 }
-.advantages .btn:hover {
+.contact-buttons .btn:hover {
   box-shadow: 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65);
 }
 
-.advantages .btn-black {
+.contact-buttons .btn-black {
   border: 1px solid #00ffd8;
   color: #fff;
   background-color: inherit;
@@ -213,16 +219,12 @@ img {
   line-height: 26px;
 }
 
-.teal {
-  color: #00ffd8;
-}
-
-.about {
-  width: 1020px;
-  margin-bottom: 53px;
-  font-size: 24px;
-  line-height: 38px;
-  font-weight: 500;
+.features {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
 }
 
 .block {
@@ -352,38 +354,6 @@ img {
   text-decoration: underline;
 }
 
-/*         PARTNERS          */
-
-.partners h2 {
-  position: relative;
-  font-size: 30px;
-  line-height: 50px;
-  letter-spacing: 1px;
-  margin-bottom: 35px;
-}
-
-.partners h2::after {
-  position: absolute;
-  top: 50%;
-  left: 300px;
-  display: block;
-  content: "";
-  width: 715px;
-  height: 0;
-  border: solid 1px #000;
-}
-
-.slider {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  justify-content: space-between;
-  margin-bottom: 128px;
-  filter: grayscale(100%);
-  opacity: 0.5;
-}
-
 /*          PROJECTS          */
 
 .projects h2 {
@@ -413,7 +383,6 @@ img {
 }
 
 .project {
-  width: 100%;
   height: 290px;
   color: #fff;
   background-color: brown;
@@ -462,6 +431,38 @@ img {
 }
 .project-6{
   background: url("../img/project6.jpg") 0 0 no-repeat;
+}
+
+/*         PARTNERS          */
+
+.partners h2 {
+  position: relative;
+  font-size: 30px;
+  line-height: 50px;
+  letter-spacing: 1px;
+  margin-bottom: 35px;
+}
+
+.partners h2::after {
+  position: absolute;
+  top: 50%;
+  left: 300px;
+  display: block;
+  content: "";
+  width: 715px;
+  height: 0;
+  border: solid 1px #000;
+}
+
+.slider {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+  margin-bottom: 128px;
+  filter: grayscale(100%);
+  opacity: 0.5;
 }
 
 /*         FOOTER         */
