--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ a {
   text-decoration: none;
 }
 
+a:not([href]) {
+  cursor: default;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -133,7 +137,7 @@ img {
   letter-spacing: 0.6px;
   color: #707070;
 }
-.site-navigation a:hover {
+.site-navigation a[href]:hover {
   color: #000;
 }
 .site-navigation a:last-child {
@@ -168,7 +172,7 @@ img {
   margin-bottom: 100px;
   color: #fff;
   background-color: #141414;
-  background: linear-gradient(to top, rgba(13,13,13,0) 0%, rgba(13,13,13,0) 470px),
+  background: linear-gradient(to top, rgba(13,13,13,1) 0%, rgba(13,13,13,0) 470px),
               url("../img/welding.jpg") 50% 100% no-repeat;
 }
 
@@ -309,16 +313,21 @@ img {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin: 0;
   margin-bottom: 30px;
   padding: 0;
+}
+
+.service-block li:nth-child(3n) .service-item {
+  margin-right: 0;
 }
 
 .service-item {
   width: 275px;
   box-sizing: padding-box;
   margin-bottom: 40px;
+  margin-right: 45px;
   padding-left: 40px;
   padding-right: 45px;
   padding-top: 30px;
@@ -361,7 +370,10 @@ img {
   font-size: 30px;
   line-height: 50px;
   letter-spacing: 1px;
+  margin: 0;
+  margin-bottom: 34px;
 }
+
 .projects h2::after {
   position: absolute;
   top: 50%;
@@ -375,24 +387,36 @@ img {
 
 .project-list {
   display: flex;
-  /*flex-flow: row wrap;*/
+  flex-flow: row wrap;
   align-items: flex-start;
+  justify-content: space-between;
   align-content: flex-start;
   margin: 0;
   padding: 0;
 }
 
+.project-col1 {
+  width: 290px;
+}
+
+.project-col2 {
+  width: 583px;
+}
+
 .project {
+  position: relative;
   height: 290px;
   color: #fff;
   background-color: brown;
   padding: 50px 25px;
+  box-sizing: border-box;
+  margin-bottom: 3px;
 }
 
 .project strong {
-  margin-top: 50px;
   margin-bottom: 25px;
   font-size: 24px;
+  font-weight: 700;
   line-height: 24px;
 }
 
@@ -401,15 +425,18 @@ img {
   line-height: 22px;
 }
 
-.btn-next {
-  display: block;
-  text-align: center;
-  width: 42px;
-  height: 30px;
+.btn-arrow {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  display: inline-block;
+  padding: 6px 13px;
   color: #fff;
+  font-weight: 500;
   border: solid 2px #fff;
 }
-.btn-next:hover {
+.btn-arrow:hover {
+  color: #000;
   background-color: #00ffd8;
   border-color: #00ffd8;
 }
@@ -435,6 +462,10 @@ img {
 
 /*         PARTNERS          */
 
+.partners {
+  position: relative;
+}
+
 .partners h2 {
   position: relative;
   font-size: 30px;
@@ -454,6 +485,16 @@ img {
   border: solid 1px #000;
 }
 
+.slider-buttons {
+  position: absolute;
+  top: 20px;
+  right: 70px;
+  border: solid 1px #000;
+}
+
+.slider-buttons button {
+  border: none;
+}
 .slider {
   list-style: none;
   display: flex;
