--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
   padding: 0;
 }
 
-h1, h2, h4 {
+h1, h2, h3 {
   text-transform: uppercase;
   font-weight: 900;
 }
@@ -289,6 +289,10 @@ img {
 
 /*         SERVICES           */
 
+.services {
+  margin-bottom: 62px;
+}
+
 .services h2 {
   position: relative;
   font-size: 30px;
@@ -315,7 +319,6 @@ img {
   flex-wrap: wrap;
   justify-content: flex-start;
   margin: 0;
-  margin-bottom: 30px;
   padding: 0;
 }
 
@@ -331,11 +334,12 @@ img {
   padding-left: 40px;
   padding-right: 45px;
   padding-top: 30px;
-  min-height: 470px;
+  padding-bottom: 40px;
+  min-height: 430px;
   box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.05);
 }
 
-.service-item h4 {
+.service-item h3 {
   margin: 0;
   margin-bottom: 20px;
   font-size: 16px;
@@ -364,6 +368,10 @@ img {
 }
 
 /*          PROJECTS          */
+
+.projects {
+  margin-bottom: 110px;
+}
 
 .projects h2 {
   position: relative;
@@ -408,16 +416,20 @@ img {
   height: 290px;
   color: #fff;
   background-color: brown;
-  padding: 50px 25px;
+  padding-top: 53px;
+  padding-left: 32px;
+  padding-right: 10px;
   box-sizing: border-box;
   margin-bottom: 3px;
 }
 
 .project strong {
-  margin-bottom: 25px;
+  display: block;
+  margin-bottom: 20px;
   font-size: 24px;
   font-weight: 700;
   line-height: 24px;
+  height: 53px;
 }
 
 .project p {
@@ -427,12 +439,12 @@ img {
 
 .btn-arrow {
   position: absolute;
-  bottom: 16px;
-  right: 16px;
+  bottom: 11px;
+  right: 9px;
   display: inline-block;
   padding: 6px 13px;
   color: #fff;
-  font-weight: 500;
+  font-weight: 900;
   border: solid 2px #fff;
 }
 .btn-arrow:hover {
@@ -471,7 +483,8 @@ img {
   font-size: 30px;
   line-height: 50px;
   letter-spacing: 1px;
-  margin-bottom: 35px;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 .partners h2::after {
@@ -487,14 +500,24 @@ img {
 
 .slider-buttons {
   position: absolute;
-  top: 20px;
-  right: 70px;
-  border: solid 1px #000;
+  top: 6px;
+  right: 0;
+  box-sizing: border-box;
+  border: solid 2px #000;
 }
 
 .slider-buttons button {
+  width: 60px;
+  height: 30px;
   border: none;
+  background-color: #fff;
+  font-weight: 900;
 }
+
+.slider-buttons button:hover {
+  background-color: #00ffd8;
+}
+
 .slider {
   list-style: none;
   display: flex;
