--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
   padding: 0;
 }
 
-h1, h2, h3 {
+h1, h2 {
   text-transform: uppercase;
   font-weight: 900;
 }
@@ -341,6 +341,8 @@ img {
 }
 
 .service-item h3 {
+  text-transform: uppercase;
+  font-weight: 900;
   margin: 0;
   margin-bottom: 20px;
   font-size: 16px;
@@ -398,30 +400,33 @@ img {
 .project-list {
   display: flex;
   flex-flow: row wrap;
-  align-items: flex-start;
+  align-items: stretch;
   justify-content: space-between;
-  align-content: flex-start;
+  align-content: stretch;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .project {
   position: relative;
-  height: 290px;
+  min-height: 290px;
   color: #fff;
   background-color: brown;
   padding-left: 29px;
+  padding-bottom: 37px;
+  background-size: cover;
   box-sizing: border-box;
   margin-bottom: 3px;
 }
 
-.project strong {
-  display: block;
-  margin-bottom: 20px;
+.project h3 {
   font-size: 24px;
   font-weight: 700;
   line-height: 24px;
-  height: 53px;
+  margin: 0;
+  margin-bottom: 20px;
+  min-height: 19px;
 }
 
 .project p {
@@ -445,6 +450,7 @@ img {
   color: #000;
   background-color: #00ffd8;
   border-color: #00ffd8;
+  opacity: 1;
 }
 
 .project-col1 {
@@ -459,9 +465,10 @@ img {
   padding-right: 80px;
 }
 
-.project-col2 strong {
+.project-col2 h3 {
   font-size: 32px;
   line-height: 42px;
+  min-height: 30px;
 }
 
 .project-1 {
@@ -524,14 +531,21 @@ img {
   height: 30px;
   border: none;
   background-color: #fff;
+  cursor: pointer;
 }
 
 .slider-buttons button:hover {
-  background-color: #00ffd8;
-  opacity: 0.3;
+  background-color: rgba(0, 255, 216, 0.3);
 }
 
-.dash {
+.prev {
+  position: relative;
+}
+.prev::after {
+  position: absolute;
+  left: 55px;
+  top: 11px;
+  content: "";
   width: 0;
   height: 8px;
   border: solid 1px #292929;
@@ -544,8 +558,13 @@ img {
   padding: 0;
   justify-content: space-between;
   margin-bottom: 128px;
-  filter: grayscale(100%);
+}
+
+.slider li {
   opacity: 0.5;
+}
+.slider li:hover {
+  opacity: 1;
 }
 
 /*         FOOTER         */
@@ -606,7 +625,7 @@ img {
 
 .feedback button {
   margin-top: 34px;
-  padding: 13px 47px;
+  padding: 19px 47px;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 25px;
   line-height: 50px;
