--- a/css/style.css
+++ b/css/style.css
@@ -334,13 +334,8 @@ img {
   padding: 0;
 }
 
-.service-block li:nth-child(3n) .service-item {
-  margin-right: 0;
-}
-
 .service-item {
   width: 275px;
-  box-sizing: padding-box;
   margin-bottom: 40px;
   margin-right: 45px;
   padding-left: 40px;
@@ -349,6 +344,10 @@ img {
   padding-bottom: 40px;
   min-height: 430px;
   box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.05);
+}
+
+.service-item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .service-item h3 {
@@ -583,11 +582,13 @@ img {
   margin-bottom: 128px;
 }
 
-.slider li {
+.slider a {
   opacity: 0.5;
+  outline: none;
 }
 
-.slider li:hover {
+.slider a:hover,
+.slider a:focus {
   opacity: 1;
 }
 
@@ -610,7 +611,7 @@ img {
   height: 465px;
   background-color: #000;
   color: #fff;
-  padding-top: 67px;
+  padding-top: 60px;
 }
 
 .feedback {
@@ -674,7 +675,7 @@ img {
 
 .user-name input {
   width: 180px;
-  margin-bottom: 43px;
+  margin-bottom: 36px;
 }
 
 .feedback-form button {
@@ -689,6 +690,7 @@ img {
   background-color: #000;
   color: #fff;
   cursor: pointer;
+  outline: none;
 }
 
 .feedback-form button:hover,
@@ -712,11 +714,13 @@ img {
 .confidentiality {
   border-bottom: dotted 1px;
   color: #000;
+  outline: none;
 }
 
 .confidentiality:hover,
 .confidentiality:focus {
   border-bottom: solid 1px;
+  opacity: 1;
 }
 
 .info {
@@ -728,6 +732,10 @@ img {
   line-height: 38px;
 }
 
+.footer-contacts {
+  margin-top: 8px;
+}
+
 .footer-contacts img {
   margin-bottom: 16px;
 }
@@ -736,15 +744,14 @@ img {
   list-style: none;
   display: flex;
   margin: 0;
+  margin-left: -17px;
   padding: 0;
-  align-items: flex-end;
   margin-top: 48px;
 }
 
 .social-buttons a {
   display: block;
-  height: 26px;
-  width: 45px;
+  height: 30px;
   opacity: 0.5;
   outline: none;
   cursor: pointer;
@@ -756,16 +763,18 @@ img {
 }
 
 .social-vk {
-  width: 65px;
-  background: url("../img/vk.png") 0% 50% no-repeat;
+  width: 70px;
+  background: url("../img/vk.png") 50% 50% no-repeat;
 }
 
 .social-tw {
-  background: url("../img/tw.png") 100% 50% no-repeat;
+  width: 50px;
+  background: url("../img/tw.png") 50% 50% no-repeat;
 }
 
 .social-fb {
-  background: url("../img/fb.png") 100% 50% no-repeat;
+  width: 50px;
+  background: url("../img/fb.png") 50% 50% no-repeat;
 }
 
 .coordinates {
